--- a/HW2.qmd
+++ b/HW2.qmd
@@ -46,7 +46,7 @@ unique(st_is_valid(bird)) # yay!
 
 # Part 1
 
-# Part 1.1
+## Part 1.1
 
 Create a map of historical redlining neighborhoods
 
@@ -117,11 +117,79 @@ ej_holc %>%
  summarise(
     Percent = round((n() / 8988) * 100, 2)) %>% 
   mutate(Percent = paste0(Percent, "%")) %>% 
+  rename(HOLC_Grade = grade) %>%   # capitalize for pretty table
   st_drop_geometry() %>% 
   # pretty table
   kbl(booktabs = T, caption = "Census block groups and percent") %>%
   kable_styling(latex_options = "striped")
 ```
+
+## Part 1.3
+
+Create at least two visualizations summarizing current conditions (from the EJScreen data) within HOLC grades using the mean of the following variables (you may combine variables or create separate plots):
+
+% low income
+percentile for Particulate Matter 2.5
+percentile for low life expectancy
+Use ggplot for your visualizations! You will first need to calculate mean of each variable grouped by HOLC grade.
+
+```{r}
+#| message: false
+#| warning: false
+#| fig-height: 6
+#| fig-width: 6
+
+## Wrangle means
+means <- ej_holc %>% 
+  group_by(grade) %>% # for each grade calculate:
+  summarize(low_income_mean = mean(lowincpct, na.rm = TRUE),
+            pm25_mean = mean(d2_pm25, na.rm = TRUE),
+            life_exp_pct_mean = mean(lifeexppct, na.rm = TRUE)) %>% 
+            # make more intuitive (actual percents not proportions)
+            mutate(pct_low_income = low_income_mean * 100) %>% 
+             mutate(pct_le = life_exp_pct_mean * 100)
+
+### Low Income plot
+means %>%  
+  ggplot(aes(x = grade, y = pct_low_income, fill = grade)) + # color by grade for fun
+  geom_col() + # bar chart
+  labs(
+    x = "HOLC Grade", # grade on x
+    y = "Percent Low Income Within Grade (%)", # percent 
+    title = "Mean low income by HOLC grade") + # add title
+  theme_minimal() + # clean theme
+  theme(legend.position = "none") # legend does not add anything just fun colors
+
+### PM
+means %>%  
+  ggplot(aes(x = grade, y = pm25_mean, fill = grade)) + # color by grade for fun
+  geom_col() + # bar chart
+  labs(
+    x = "HOLC Grade", # grade on x
+    y = "Percentile of PM 2.5 Pollution",
+    title = "Particulate Matter Pollution by HOLC grade") + # add title
+  theme_minimal() + # clean theme
+  theme(legend.position = "none") # legend does not add anything just fun colors
+
+### life expectancy
+means %>%  
+  ggplot(aes(x = grade, y = pct_le, fill = grade)) + # color by grade for fun
+  geom_col() + # bar chart
+  labs(
+    x = "HOLC Grade", # grade on x
+    y = "Percent Low Life Expectancy Within Grade (%)",
+    title = "Low Life Expectancy by HOLC grade") + # add title
+  theme_minimal() + # clean theme
+  theme(legend.position = "none") # legend does not add anything just fun colors
+```
+
+## Part 1.4 (COME BACK TO THIS)
+
+- Write a brief paragraph reflecting on these results
+
+- Interpret the patterns you observe in your results
+
+- Discuss potential relationships between historical redlining grades and current environmental/socioeconomic conditions
 
 
 
