--- a/HW2.qmd
+++ b/HW2.qmd
@@ -7,16 +7,18 @@ format: html
 
 # Setup
 
+Let's load the needed libraries and import the data. For each spatial dataset, I will check if it is valid using `st_is_valid`. If it is not valid, I will use `st_make_valid()` to make it valid. I will check the CRS and update the CRS under parts 1.2 and part 2 setup. 
+
 ```{r}
 #| message: false
 #| warning: false
 
-library(tidyverse)
-library(sf)
-library(tmap)
-library(here)
+library(tidyverse) # data wrangling
+library(sf) # for spatial data
+library(tmap) # for pretty maps
+library(here) # file pathing
 library(viridisLite) # colors
-library(janitor)
+library(janitor) # data wrangling
 library(kableExtra) # pretty table
 library(patchwork) # combine plots
 
@@ -41,24 +43,27 @@ bird <- st_read(here::here("data", "gbif-birds-LA",
                 quiet = TRUE) # hide the message
 # check and make valid
 unique(st_is_valid(bird)) # TRUE, yay
+```
 
+Now, let's make a custom, colorblind friendly, non-continuous (since the HOLC grades are categorical), that matches the historical colors of HOLC grade maps. I used Paul Tol's colorblind friendly "bright" palette, and picked the colors that match the historical maps. This is saved in `grade_colors` that I will use throughout the homework. 
+
+```{r}
 # let's make a custom, **colorblind-friendly*** color palette for the grades
 # hex codes come from colorblind-friendly Paul Tol color palette (the "bright" one)
 grade_colors <-c(
-  "A"  = "#228833",
-  "B"  = "#4477AA",
-  "C"  = "#CCBB44",
-  "D"  =  "#EE6677",
+  "A"  = "#228833", # green
+  "B"  = "#4477AA", # blue
+  "C"  = "#CCBB44", # yellow
+  "D"  =  "#EE6677", # pink
   "NA" = "black",
   "NA_real" = "black")
 ```
-
 
 # Part 1
 
 ## Part 1.1
 
-Create a map of historical redlining neighborhoods
+Create a map of historical redlining neighborhoods. I will 
 
 ```{r fig.cap="Figure 1. Visualizing HOLC grades assigned to Los Angeles, CA. HOLC grades are from A-D, and some areas were not assigned HOLC grades, which fall into the Missing category."}
 #| message: false
@@ -94,7 +99,7 @@ Create a table summarizing:
 
 - Also include the percent of census black groups that don’t fall within a HOLC grade
 
-- Hint: The HOLC data contains the grades and the EJScreen data contains the census blocks, so you will need to combine the data spatially before doing summary statistics. Once you combine and no longer need the geometries, you can use st_drop_geometry().
+I am first going to filter the `ej` enviornmental data to just Los Angeles county to get `ej.la`. Next, I will check the CRS for `ej.la` and the `holc` data and if they are not the same, will convert them to the same crs.
 
 ```{r fig.cap="Table 1. Comparing the percent of census blocks in each HOLC Grade in Los Angeles, CA. HOLC grades are from A-D, and some areas were not assigned HOLC grades, which fall into the NA category."}
 #| message: false
@@ -115,12 +120,23 @@ if(st_crs(ej.la) != st_crs(holc)){
 st_crs(ej.la) == st_crs(holc) # false
 ej.la <- st_transform(ej.la, crs= st_crs(holc)) # set to same as holc
 st_crs(ej.la) == st_crs(holc) # true, yay!
+```
 
+Horray! Now it is time to combine the data for `ej.la` and `holc` now that they are in the same crs. I am going to use `st_join`, since these are spatially enabled tables. I want to do a "join", to add the holc information to the environmental justice LA data. 
+
+```{r}
 # JOIN 
 # join x,y adds y columns to x
 ej_holc <- st_join(ej.la, holc) %>%
   clean_names() %>% # bc the caps are driving me crazy
   st_drop_geometry() # no longer needed
+```
+
+Now let's calculate the summary statistics. This is no longer spatial, so classic tidyverse data wrangling here. I will make a pretty table using `kbl`, my go to pretty table package. 
+
+```{r}
+#| message: false
+#| warning: false
 
 ### summary stats
 # the percentage of "census block groups" that fall within each HOLC grade
@@ -142,19 +158,15 @@ ej_holc %>%
 
 ## Part 1.3
 
-Create at least two visualizations summarizing current conditions (from the EJScreen data) within HOLC grades using the mean of the following variables (you may combine variables or create separate plots):
+Create at least two visualizations summarizing current conditions (from the EJScreen data) within HOLC grades using the mean of the following variables (you may combine variables or create separate plots): % low income, percentile for Particulate Matter 2.5, percentile for low life expectancy. 
 
-% low income
-percentile for Particulate Matter 2.5
-percentile for low life expectancy
 Use ggplot for your visualizations! You will first need to calculate mean of each variable grouped by HOLC grade.
 
-```{r fig.cap="Figure 2. Comparing environmental conditions across HOLC grades. This figure compares (A) the percent of low income folks, (B) the percentile of Particulate Matter 2.5 (PM 2.5) pollution exposure, and (C) the percent of folks with a low life expectancy, all visualized per HOLC grade. HOLC grades are from A-D, and some areas were not assigned HOLC grades, which fall into the NA category. Each barchart depicts the mean value for each HOLC grade, The colors do not differentiate differences, but are colored by historical maps of HOLC grades for aethestic."}
+First I will calculate the means per HOLC grade. So I will use group by to calculate the mean values of each variables per grade.
+
+```{r}
 #| message: false
 #| warning: false
-#| fig-height: 6
-#| fig-width: 6
-
 ## Wrangle means
 means <- ej_holc %>% 
   group_by(grade) %>% # for each grade calculate:
@@ -163,7 +175,16 @@ means <- ej_holc %>%
             life_exp_pct_mean = mean(lifeexppct, na.rm = TRUE)) %>% 
             # make more intuitive (actual percents not proportions)
             mutate(pct_low_income = low_income_mean * 100) %>% 
-             mutate(pct_le = life_exp_pct_mean * 100)
+            mutate(pct_le = life_exp_pct_mean * 100)
+```
+
+Now let's visualize! I will start with a paneled barchart with HOLC grade on the x and the enviornmetal variables on the y. I'll combine them in patchwork. 
+
+```{r fig.cap="Figure 2. Comparing environmental conditions across HOLC grades. This figure compares (A) the percent of low income folks, (B) the percentile of Particulate Matter 2.5 (PM 2.5) pollution exposure, and (C) the percent of folks with a low life expectancy, all visualized per HOLC grade. HOLC grades are from A-D, and some areas were not assigned HOLC grades, which fall into the NA category. Each barchart depicts the mean value for each HOLC grade, The colors do not differentiate differences, but are colored by historical maps of HOLC grades for aethestic."}
+#| message: false
+#| warning: false
+#| fig-height: 6
+#| fig-width: 6
 
 ### Low Income plot
 low_income <- means %>%  
@@ -212,6 +233,8 @@ barplot <- (low_income | pm | le) +
 barplot
 ```
 
+Now let's do a multivariate plot, with one variable on the y axis and one variable shown by color. Of course, we will use a continuous ad colorblind friendly palette. 
+
 ```{r fig.cap="Figure 3. Comparing environmental conditions across HOLC grades. This figure visualizes the percent of low income folks on the y axis, and the points are colored by the percentile of Particulate Matter 2.5 (PM 2.5) pollution exposure, with yellows being higher and blues being lower, compared across HOLC grades. HOLC grades are from A-D, and some areas were not assigned HOLC grades, which fall into the NA category. Each value depicts the mean value for each HOLC grade."}
 ## mulitvariate plot
 means %>%  
@@ -250,6 +273,10 @@ Hints: Ensure the bird observations and HOLC dataset have matching CRS’, then 
 
 ## Part 2 setup
 
+I will start by wrangling the CRS to ensure it is the same in the bird data and the holc data. Next, I will make an exploratory plot of the data. It takes forever to run and is not part of the assignment so it is commented out. 
+
+Next, I will join the data again using `st_join`, so I have data from both dataframes. 
+
 ```{r}
 ## crs check for bird data
 if(st_crs(bird) != st_crs(holc)){
@@ -258,7 +285,7 @@ if(st_crs(bird) != st_crs(holc)){
 # double check
 st_crs(bird) == st_crs(holc) # true, all good!
 
-# checked in first chunk if the geometry is valid
+# checked in first chunk of themarkdown if the geometry is valid
 # exploratory vis of the data (commented out to avoid uneeded plots for Ale when grading)
 Quick_vis_birds <- tm_shape(holc) + # import holc geo data
   tm_basemap("Esri.WorldGrayCanvas") + # dull background that still has geo info
@@ -282,7 +309,11 @@ Quick_vis_birds <- tm_shape(holc) + # import holc geo data
 bird_holc <- st_join(holc, bird) # keep only bird observations that occur in holc
 # check it worked
 # head(bird_holc) commented out for a clean markdown, but it worked
+```
 
+Now let's calculate the summary stats per HOLC grade, so to do that, I need to `group_by` the grade before doing so. I also made a pretty table that I commented out because we will visualize the data in a plot in Part 2.1. 
+
+```{r}
 # to calculate the percent we need the total obs
 nrow(bird_holc) # 135,682 observations of birds within holc
 
@@ -297,10 +328,12 @@ birdholc_summary <- bird_holc %>%
 # birdholc_summary %>% 
 #     kbl(booktabs = T, caption = "Percent of bird observations\nin each HOLC grade") %>%
 #   kable_styling(latex_options = "striped")
-
 ```
 
+
 ## Part 2.1
+
+Now I will visualize the data in a barplot.
 
 ```{r fig.cap="Figure 4. Comparing bird observations across HOLC grades. This figure compares the percent of total bird observations in LA per HOLC grade. HOLC grades are from A-D, and some areas were not assigned HOLC grades, which fall into the NA category. Each bardepicts the mean value of the percent of observations for each HOLC grade, The colors do not differentiate differences, but are colored by historical maps of HOLC grades for aethestic."}
 #| message: false
